--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     background-image: url("../../assets/images/herringbone.png");
     margin: 0;
     background-color: #ffffff;
@@ -8,7 +8,7 @@
     bottom: 0;
 }
 
-.wrapper {
+*/ .wrapper {
     font-family: Arial, "HelveticaNeue", Helvetica, sans-serif;
     color: #777777;
     background-color: #ffffff;
@@ -73,7 +73,7 @@ h2 {
     height: 50px;
 }
 
-a:link {
+*/ a:link {
     color: #777777;
 }
 
@@ -85,6 +85,7 @@ a:hover {
     background-color: #4aaaa5;
     color: #ffffff;
 }
+
 
 #headshot {
     float: left;
@@ -172,4 +173,4 @@ input[type=text] {
     padding-left: 15px;
     border-style: solid;
     border-color: #dddddd;
-} */
+}
